--- a/d3-project-folder/tourist_data.ipynb
+++ b/d3-project-folder/tourist_data.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1c9b5c7f1f773a3595d284811bc9933b04673a5ccc831341cd9a2f22d989bfcb"
+  "signature": "sha256:d9561365b0f888828140693741a1a41d60f0fe06cdf798abc6cd4b59085b173d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -33,7 +33,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "list2[0:20]"
+      "list2[0:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -41,7 +41,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 75,
        "text": [
         "[['AFGHANISTAN', '', '', '', '', '', ''],\n",
         " ['Inbound tourism', '', '', '', '', '', ''],\n",
@@ -64,39 +64,11 @@
         "  '127',\n",
         "  '80',\n",
         "  '..'],\n",
-        " ['Travel - US$ Mn', '55', '59', '83', '113', '75', '..'],\n",
-        " ['Passenger transport - US$ Mn', '3', '2', '3', '14', '5', '..'],\n",
-        " ['ALBANIA', '', '', '', '', '', ''],\n",
-        " ['Inbound tourism', '', '', '', '', '', ''],\n",
-        " ['Arrivals - Thousands',\n",
-        "  '1,420',\n",
-        "  '1,856',\n",
-        "  '2,417',\n",
-        "  '2,932',\n",
-        "  '3,514',\n",
-        "  '3,256'],\n",
-        " ['Arrivals - Thousands',\n",
-        "  '1,247',\n",
-        "  '1,711',\n",
-        "  '2,191',\n",
-        "  '2,469',\n",
-        "  '3,156',\n",
-        "  '2,857'],\n",
-        " ['Arrivals - Thousands', '57', '65', '74', '136', '149', '118'],\n",
-        " ['Tourism expenditure in the country - US$ Mn',\n",
-        "  '1,848',\n",
-        "  '2,014',\n",
-        "  '1,780',\n",
-        "  '1,833',\n",
-        "  '1,623',\n",
-        "  '1,670'],\n",
-        " ['Travel - US$ Mn', '1,713', '1,829', '1,613', '1,632', '1,464', '1,473'],\n",
-        " ['Passenger transport - US$ Mn', '135', '185', '167', '201', '159', '197'],\n",
-        " ['Outbound tourism', '', '', '', '', '', '']]"
+        " ['Travel - US$ Mn', '55', '59', '83', '113', '75', '..']]"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
