--- a/mki_code/mki_code_mpld3.ipynb
+++ b/mki_code/mki_code_mpld3.ipynb
@@ -18,8 +18,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "pip install mpld3"
    ]
