--- a/mki_code/8.901-hw2.ipynb
+++ b/mki_code/8.901-hw2.ipynb
@@ -30,6 +30,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$5.341068 \\times 10^{46} \\; \\mathrm{\\frac{keV}{kpc}}$"
+      ],
+      "text/plain": [
+       "<Quantity 5.341067973817616e+46 keV / kpc>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=(1*u.solMass)**2*G/(1*u.kpc)**2\n",
+    "x.decompose().to(u.keV/u.kpc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$5.341068 \\times 10^{46} \\; \\mathrm{keV\\,kpc}$"
+      ],
+      "text/plain": [
+       "<Quantity 5.341067973817615e+46 keV kpc>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=(1*u.solMass)**2*G\n",
+    "x.decompose().to(u.keV*u.kpc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.17450244561e+21\n",
+      "4.15539338745e+21 kg2 / m2\n",
+      "5.34106797382e+46 keV / kpc\n"
+     ]
+    }
+   ],
+   "source": [
+    "#(1*u.kpc).decompose()\n",
+    "print 1.99e30**2/(3.08e19)**2\n",
+    "print ((1*u.solMass)**2/(1*u.kpc)**2).decompose()\n",
+    "print (((1*u.solMass)**2/(1*u.kpc)**2)*G).decompose().to(u.keV/u.kpc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.34106797382e+46 keV kpc\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (((1*u.solMass)**2*G)).decompose().to(u.keV*u.kpc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
