--- a/mki_code/Seaborn Python.ipynb
+++ b/mki_code/Seaborn Python.ipynb
@@ -220,7 +220,7 @@
    "execution_count": 56,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
